[gd_scene load_steps=4 format=3 uid="uid://blwewyk2fnrew"]

[ext_resource type="Texture2D" uid="uid://cggbnk4jjwqa1" path="res://Graphics/Obstacles/Walls/shutter.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Gimmicks/Shutter.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
resource_local_to_scene = true
size = Vector2(8, 32)

[node name="Shutter" type="CharacterBody2D"]
collision_layer = 8207
collision_mask = 0
script = ExtResource("2")

[node name="Shutter" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="Mask" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="OpenShutter" type="Area2D" parent="."]
position = Vector2(-80, 0)
collision_layer = 0
collision_mask = 4096

[node name="Mask" type="CollisionShape2D" parent="OpenShutter"]
modulate = Color(0, 0.298039, 1, 1)
shape = SubResource("1")

[node name="CloseShutter" type="Area2D" parent="."]
position = Vector2(-128, 0)
collision_layer = 0
collision_mask = 4096

[node name="Mask" type="CollisionShape2D" parent="CloseShutter"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")

[node name="CloseShutter2" type="Area2D" parent="."]
position = Vector2(48, 0)
collision_layer = 0
collision_mask = 4096

[node name="Mask" type="CollisionShape2D" parent="CloseShutter2"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")

[connection signal="body_entered" from="OpenShutter" to="." method="_on_OpenShutter_body_entered"]
[connection signal="body_entered" from="CloseShutter" to="." method="_on_CloseShutter_body_entered"]
[connection signal="body_entered" from="CloseShutter2" to="." method="_on_CloseShutter_body_entered"]
